# AeroTrack-SDR

./: .gitignore  CMakeLists.txt  COMMANDS.md  README.md  SYSTEM.md
aerotrack-simulation/: package.json  pnpm-lock.yaml
aerotrack-simulation/app/: globals.css  layout.tsx  page.tsx
aerotrack-simulation/components/config/: DerivedParams.tsx  RadarConfigForm.tsx  TargetManager.tsx
aerotrack-simulation/components/layout/: Header.tsx  Sidebar.tsx
aerotrack-simulation/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx
aerotrack-simulation/components/visualization/: IQWaveform.tsx  PlotlyWrapper.tsx  RadarPPI.tsx  RangeDopplerMap.tsx  SignalSpectrum.tsx  StatsPanel.tsx  TargetTracker.tsx
aerotrack-simulation/lib/: api.ts  types.ts
aerotrack-simulation/lib/hooks/: useSimulation.ts
receiver/: CMakeLists.txt  build_receiver.sh
receiver/build_zcu102/: aerotrack_receiver
receiver/include/: udp_receiver.hpp
receiver/src/: main.cpp  udp_receiver.cpp
server/: CMakeLists.txt
server/include/: api_server.hpp  range_doppler_processor.hpp  simulation_data.hpp  simulation_engine.hpp
server/src/: api_server.cpp  main.cpp  range_doppler_processor.cpp  simulation_engine.cpp
transmitter/: CMakeLists.txt
transmitter/include/: noise_generator.hpp  packet_framer.hpp  radar_config.hpp  signal_generator.hpp  target_simulator.hpp  udp_transmitter.hpp
transmitter/src/: main.cpp  noise_generator.cpp  packet_framer.cpp  signal_generator.cpp  target_simulator.cpp  udp_transmitter.cpp
